--- a/index.html
+++ b/index.html
@@ -1,1 +1,194 @@
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bir Kelime Bir İşlem - Ana Sayfa</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+    
+    <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
 
+        .hero-section {
+            text-align: center;
+            padding: 60px 20px 40px;
+        }
+
+        .hero-title {
+            font-weight: 700;
+            color: #2c3e50;
+            font-size: 3.5rem;
+            margin-bottom: 10px;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+        }
+
+        .hero-subtitle {
+            color: #555;
+            font-size: 1.2rem;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        .card-container {
+            flex-grow: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding-bottom: 50px;
+        }
+
+        .mode-card {
+            border: none;
+            border-radius: 20px;
+            background: white;
+            transition: all 0.4s ease;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.08);
+            overflow: hidden;
+            height: 100%;
+            cursor: pointer;
+            position: relative;
+            top: 0;
+        }
+
+        .mode-card:hover {
+            transform: translateY(-15px);
+            box-shadow: 0 20px 40px rgba(0,0,0,0.15);
+        }
+
+        .icon-wrapper {
+            height: 120px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 4rem;
+            color: white;
+        }
+
+        /* Yarışma Modu Renkleri */
+        .card-competition .icon-wrapper {
+            background: linear-gradient(45deg, #4e54c8, #8f94fb);
+        }
+        .card-competition .btn-action {
+            background-color: #4e54c8;
+            border-color: #4e54c8;
+        }
+
+        /* Antrenman Modu Renkleri */
+        .card-training .icon-wrapper {
+            background: linear-gradient(45deg, #f12711, #f5af19);
+        }
+        .card-training .btn-action {
+            background-color: #d35400;
+            border-color: #d35400;
+        }
+
+        .card-body {
+            padding: 30px;
+            text-align: center;
+        }
+
+        .card-title {
+            font-weight: 700;
+            margin-bottom: 15px;
+            font-size: 1.5rem;
+            color: #333;
+        }
+
+        .card-text {
+            color: #666;
+            margin-bottom: 25px;
+            min-height: 60px; /* Hizalamayı korumak için */
+        }
+
+        .btn-action {
+            color: white;
+            padding: 12px 30px;
+            border-radius: 50px;
+            font-weight: 500;
+            width: 100%;
+            transition: all 0.3s;
+        }
+
+        .btn-action:hover {
+            filter: brightness(1.1);
+            color: white;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            color: #888;
+            font-size: 0.9rem;
+        }
+
+        /* Animasyonlu giriş */
+        .fade-in-up {
+            animation: fadeInUp 0.8s ease-out;
+        }
+
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+    </style>
+</head>
+<body>
+
+    <div class="hero-section fade-in-up">
+        <h1 class="hero-title">Az Kelime Çok İşlem</h1>
+        <p class="hero-subtitle">
+            Matematik ve kelime becerilerini geliştirmek için tasarlanmış dijital öğrenme platformu.
+        </p>
+    </div>
+
+    <div class="container card-container fade-in-up" style="animation-delay: 0.2s;">
+        <div class="row w-100 justify-content-center g-4">
+            
+            <div class="col-md-5 col-lg-4">
+                <div class="card mode-card card-competition h-100" onclick="window.location.href='kelime-islem.html'">
+                    <div class="icon-wrapper">
+                        <i class="fa-solid fa-trophy"></i>
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">Yarışma Modu</h3>
+                        <p class="card-text">
+                            Tam kurallı yarışma deneyimi. Puan tablosu, süre sayaçları, otomatik hesaplama kontrolleri ve kura çekimi içerir.
+                        </p>
+                        <a href="kelime-islem.html" class="btn btn-action btn-lg">Yarışmaya Başla</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-5 col-lg-4">
+                <div class="card mode-card card-training h-100" onclick="window.location.href='antrenman.html'">
+                    <div class="icon-wrapper">
+                        <i class="fa-solid fa-brain"></i>
+                    </div>
+                    <div class="card-body">
+                        <h3 class="card-title">Antrenman Modu</h3>
+                        <p class="card-text">
+                            Sadece soru üretimine odaklanın. Sınıf içi hızlı pratikler ve serbest çalışmalar için sadeleştirilmiş arayüz.
+                        </p>
+                        <a href="antrenman.html" class="btn btn-action btn-lg">Antrenman Yap</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 ALKÜ Eğitim Fakültesi - Matematik Eğitimi</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
