--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2025 ALKÜ Eğitim Fakültesi - Matematik Eğitimi</p>
+        <p>&copy; 2025</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
