--- a/kelime-islem.html
+++ b/kelime-islem.html
@@ -35,9 +35,12 @@
         .word-preview { min-height: 80px; font-size: 3rem; font-weight: bold; text-align: center; letter-spacing: 10px; }
         .joker { color: red; }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-
+<a href="index.html" class="btn btn-outline-secondary position-absolute top-0 start-0 m-3" style="z-index: 1000; text-decoration: none;">
+    <i class="fa-solid fa-arrow-left"></i> <span class="d-none d-md-inline ms-1">Ana Sayfa</span>
+</a>
 <div class="container-fluid">
     <div class="game-header">
         <h1>Bir Kelime Bir İşlem</h1>
