--- a/antrenman.html
+++ b/antrenman.html
@@ -35,9 +35,12 @@
             .timer-display { font-size: 2.5rem; }
         }
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-
+<a href="index.html" class="btn btn-outline-secondary position-absolute top-0 start-0 m-3" style="z-index: 1000; text-decoration: none;">
+    <i class="fa-solid fa-arrow-left"></i> <span class="d-none d-md-inline ms-1">Ana Sayfa</span>
+</a>
 <div class="container">
     <h1 class="app-title">ANTRENMAN MODU</h1>
     <p class="app-subtitle">Sadece Üretim ve Pratik</p>
